fix(layout): fit code blocks on mobile

--- a/src/style/highlight.scss
+++ b/src/style/highlight.scss
@@ -21,6 +21,7 @@ code {
 
 pre {
   padding: 10px;
+  overflow: scroll;
 
   code {
     padding: 0;
